--- a/JavaScript/week_14/greeting-calculator_and_color-block/assets/styles/style.css
+++ b/JavaScript/week_14/greeting-calculator_and_color-block/assets/styles/style.css
@@ -16,6 +16,8 @@ body {
     gap: 5vw;
 }
 
+
+
 .title {
     color: coral;
     padding-top: 5vh;
@@ -42,7 +44,7 @@ body {
     box-shadow: 0px 0px 15px 0px rgba(255,127,80,0.75);
 }
 
-.message {
+.block {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,17 +52,15 @@ body {
     padding: 5vh;
     border: 2px solid coral;
     cursor: pointer;
-
+    background: rgb(254, 252, 229);
 }
 
-.calculator {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 30vw;
-    padding: 5vh;
-    border: 2px solid coral;
-    cursor: pointer;
+.selected {
+    background: rgb(255, 222, 180);
+}
+
+.block:hover {
+    box-shadow: 0px 0px 15px 0px rgba(255,127,80,0.75);
 }
 
 .calculator__button {
