--- a/JavaScript/week_14/greeting-calculator_and_color-block/assets/styles/style.css
+++ b/JavaScript/week_14/greeting-calculator_and_color-block/assets/styles/style.css
@@ -16,8 +16,6 @@ body {
     gap: 5vw;
 }
 
-
-
 .title {
     color: coral;
     padding-top: 5vh;
@@ -77,5 +75,13 @@ body {
 
 .calculator__button:hover {
     box-shadow: 0px 0px 15px 0px rgba(255,127,80,0.75);
+}
+
+img {
+    display: none;
+}
+
+img:first-child {
+    display: block;
 }
 
