--- a/JavaScript/week_15/calculator_themes/assets/styles/style.css
+++ b/JavaScript/week_15/calculator_themes/assets/styles/style.css
@@ -71,24 +71,25 @@ a {
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 400px;
     padding: 5vh;
     border: 2px solid #acacac;
     border-radius: 20px;
-    cursor: pointer;
-    transition: 0.5s;
     margin-top: 5vh;
     margin-bottom: 5vh;
     background: #FFFFFF;
 }
 
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .form__item {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 1px;
 }
 
 .form__item_button {
@@ -138,6 +139,20 @@ a {
     font-size: 12px;
     font-weight: 700;
 }
+
+#errorName, #errorLogin, #errorEmail, #errorPassword, #errorTel, #errorAge {
+    color: red;
+    font-size: 12px;
+    width: 250px;
+}
+
+#hello {
+
+    font-size: 2rem;
+
+}
+
+/*calculator*/
 
 .calculator {
     display: flex;
