--- a/JavaScript/week_15/calculator_themes/assets/styles/style.css
+++ b/JavaScript/week_15/calculator_themes/assets/styles/style.css
@@ -14,10 +14,25 @@ a {
     align-items: center;
 }
 
+.blocks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+
+.subtitle {
+    color: chocolate;
+    text-align: center;
+}
+
+/*header*/
+
 .header {
     width: 100%;
-    
-    background: rgb(254, 252, 229);
+    background: rgb(246, 246, 246);
 }
 
 .header__container {
@@ -33,6 +48,8 @@ a {
 .header__link {
     padding-left: 7px;
     padding-right: 7px;
+    color: chocolate;
+    font-weight: 700;
 }
 
 .header__link:hover {
@@ -52,19 +69,12 @@ a {
     text-align: center;
 }
 
-.blocks {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-}
-
-
-.subtitle {
+.themes__title {
     color: chocolate;
-    text-align: center;
+    font-weight: 700;
 }
+
+/*form*/
 
 .form {
     width: 400px;
@@ -76,7 +86,7 @@ a {
     background: #FFFFFF;
 }
 
-#form {
+.form__container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -142,9 +152,9 @@ a {
     width: 250px;
 }
 
-#hello {
-
-    font-size: 2rem;
+.hello {
+    font-size: 1.5rem;
+    text-align: center;
 
 }
 
@@ -158,7 +168,7 @@ a {
     border: 2px solid burlywood;
     cursor: pointer;
     transition: 0.5s;
-    background: rgb(254, 252, 229);
+    background: rgb(255, 244, 215);
     margin-top: 5vh;
     margin-bottom: 5vh;
     border-radius: 20px;
@@ -194,6 +204,7 @@ a {
 
 .message__button:hover {
     background: rgb(205, 157, 95);
+    
 }
 
 
