--- a/JavaScript/week_15/calculator_themes/assets/styles/style.css
+++ b/JavaScript/week_15/calculator_themes/assets/styles/style.css
@@ -22,11 +22,12 @@ a {
     margin-bottom: 5vh;
 }
 
-
 .subtitle {
     color: chocolate;
     text-align: center;
 }
+
+
 
 /*header*/
 
@@ -42,7 +43,6 @@ a {
     justify-content: space-between;
     padding-top: 5vh;
     padding-bottom: 5vh;
-
 }
 
 .header__link {
@@ -73,6 +73,20 @@ a {
     color: chocolate;
     font-weight: 700;
 }
+
+.theme {
+    outline: none;
+    background: none;
+    border: none;
+    color: chocolate;
+}
+
+.theme__color {
+    background: rgb(255, 243, 235);
+    color: chocolate;
+}
+
+
 
 /*form*/
 
@@ -113,7 +127,6 @@ a {
     color: #FFFFFF;
     cursor: pointer;
     transition: 0.5s;
-
 }
 
 .form__button:hover {
@@ -138,7 +151,6 @@ a {
     text-align: center;
     color: #656565;
     font-size: 12px;
-    
 }
 
 .form__footer {
@@ -168,6 +180,8 @@ a {
 
 }
 
+
+
 /*calculator*/
 
 .calculator {
@@ -183,8 +197,6 @@ a {
     margin-bottom: 5vh;
     border-radius: 20px;
 }
-
-
 
 .calculator__button {
     width: 50px;
@@ -217,5 +229,12 @@ a {
     
 }
 
+.numbers {
+    border-radius: 3px;
+    border: 2px solid #acacac;
+}
 
-
+.numbers:focus {
+    outline: none;
+    box-shadow: 0px 0px 0px 2px rgb(205, 157, 95);
+}
