--- a/JavaScript/week_16/auto/assets/styles/style.css
+++ b/JavaScript/week_16/auto/assets/styles/style.css
@@ -52,6 +52,8 @@ body {
 
 .btn {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -75,5 +77,6 @@ body {
 .result {
     text-align: center;
     font-weight: 700;
+    font-size: 2rem;
     color: chocolate;
 }
