added random js

--- a/JavaScript/week_17/random/assets/styles/style.css
+++ b/JavaScript/week_17/random/assets/styles/style.css
@@ -28,6 +28,10 @@ body {
     border-radius: 5px;
 }
 
+.item {
+    text-align: center;
+}
+
 .result {
     font-size: 2rem;
     color: rgb(235, 163, 29);
