--- a/JavaScript/week_17/fio/assets/styles/style.css
+++ b/JavaScript/week_17/fio/assets/styles/style.css
@@ -25,6 +25,7 @@ body {
 
 .form__container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -36,14 +37,18 @@ body {
 
 .form__items {
     display: flex;
+    /*flex-direction: column;*/
+    padding: 20px;
+    margin-bottom: 30px;
+    /*border: 2px solid #acacac;*/
 }
 
 .form__item {
     display: flex;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-right: 10px;
 }
 
 .form__item_button {
@@ -93,6 +98,15 @@ body {
     border-radius: 20px;
 }
 
+/*.form__group {
+    width: 262px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
+    background: none;
+    border-radius: 20px;
+}*/
+
 .form__field:focus {
     outline: none;
     box-shadow: 0px 0px 0px 5px rgb(165, 229, 245);
@@ -100,16 +114,4 @@ body {
 
 .form__label {
     padding-right: 10px;
-}
-
-#errorFio {
-    color: red;
-    font-size: 12px;
-    width: 250px;
-    padding-left: 10px;
-}
-
-.hello {
-    font-size: 1.5rem;
-    text-align: center;
 }
