--- a/JavaScript/week_17/fio/assets/styles/style.css
+++ b/JavaScript/week_17/fio/assets/styles/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .form {
-    width: 1200px;
+    width: 765px;
     border: 2px solid #acacac;
     margin-top: 5vh;
     margin-bottom: 5vh;
@@ -27,20 +27,21 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding: 30px;
 }
 
 .form__container_bottom {
+    padding: 30px;
     background-color: #e6e5e5;
     border-bottom: 2px solid #acacac;
 }
 
 .form__items {
     display: flex;
-    /*flex-direction: column;*/
+    flex-direction: column;
     padding: 20px;
     margin-bottom: 30px;
-    /*border: 2px solid #acacac;*/
+    border: 2px solid #acacac;
 }
 
 .form__item {
@@ -48,7 +49,6 @@ body {
     align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-right: 10px;
 }
 
 .form__item_button {
@@ -57,10 +57,15 @@ body {
 
 }
 
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
 .form__button_reset {
     padding: 1rem;
-    margin-left: 20px;
-    width: 298px;
+    width: 200px;
     background: red;
     border: none;
     border-radius: 20px;
@@ -71,8 +76,7 @@ body {
 
 .form__button {
     padding: 1rem;
-    margin-left: 20px;
-    width: 298px;
+    width: 200px;
     background: rgb(42, 176, 209);
     border: none;
     border-radius: 20px;
@@ -98,14 +102,14 @@ body {
     border-radius: 20px;
 }
 
-/*.form__group {
+.form__group {
     width: 262px;
     margin-top: 5px;
     margin-bottom: 5px;
     border: none;
     background: none;
     border-radius: 20px;
-}*/
+}
 
 .form__field:focus {
     outline: none;
